name:                shoot-em-up
version:             0.1.0.0
author:              Thijn Kroon, Mike Wu
maintainer:          t.kroon1@students.uu.nl, t.y.m.wu@students.uu.nl
category:            Game
build-type:          Simple
cabal-version:       >=1.10


executable shoot-em-up
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       gloss,
                       random,
                       aeson,
                       bytestring
  hs-source-dirs:      src
  other-modules:       Controller
                     , Model
                     , View
                     , Classes
                     , Defaults
                     , SaveLoad
                     , Helper

  default-language:    Haskell2010